# pathfinder2e-tui

./: .gitignore  README.md  hello_world.py  info.yaml  pyproject.toml  test.py
characters/: feats.md  info.yaml  notes.md  notes.txt  spells.md
rules/: armor.py  character_sheet.py  data.py  helpers.py  skills.py  stats.py  weapons.py
styling/: hello_world.tcss
validation/: schema.json  validate.py
widgets/: data.py  data_page.py  feats_page.py  notes_page.py  shared.py  spells_page.py  stats_page.py  weapons_page.py
